Fix navbar on mobile

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -40,3 +40,10 @@ nav {
   border: none;
   outline: none;
 }
+
+@media only screen and (max-width: 1023px) {
+  nav, #compose {
+    background-image: url("../images/header-background.png");
+    background-color: rgb(172, 71, 5);
+  }
+}
