--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -24,7 +24,6 @@
   margin-bottom: 3.7rem;
   margin-top: 3rem;
   overflow-wrap: break-word;
-  text-align: center;
 }
 
 .tweet footer {
